2014-03-18  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-plugin.cpp (mageec_featextract_exec): Add support
	for phi counting features.

2014-03-18  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-plugin.cpp (mageec_featextract_exec): Add support
	for predecessor/successor counting features.

2014-03-07  James Pallister  <james.pallister@embecosm.com>

	* configure.ac: Fixed check for gcc-plugin headers.
	* configure: Regenerated.

2014-03-07  James Pallister  <james.pallister@embecosm.com>

	* configure.ac: Added check for gcc-plugin headers.
	* configure: Regenerated.

2014-03-04  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/gcc-plguin.cpp (parse_arguments): Add warning for unknown
	options.

2014-03-04  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extract.cpp: Added use of vector_math.h.
	(vector_min): Removed.
	(vector_max): Removed.
	(vector_sum): Removed.
	* include/vector_math.h: Add vector functions from GCC feature
	extractor.
	* include/Makefile.am: Add vectormath.h to installed headers.
	* include/Makefile.in: Regenerated.

2014-02-13  Simon Cook  <simon.cook@embecosm.com>

	* include/mageec/mageec-ml.h (mageec_ml::init): Mark as virtual.
	(mageec_ml::make_decision): Likewise.
	(file_ml): Define class for file-based pass control.
	* include/mageec/mageec.h (mageec_framework): Add selection of
	mageec_ml or file_ml as machine learner based on definition of
	MAGEEC_FILEML.
	* ml/ml.cpp (file_ml::init): Store string list of passes to execute
	based on executelist file.
	(file_ml::make_decision): Make execute/don't execute decision based on
	previously loaded execute list.

2014-02-11  Simon Cook  <simon.cook@embecosm.com>

	* ml/ml.cpp (mageec_ml::finish): Only delete database object if it
	exists.

2014-02-11  Simon Cook  <simon.cook@embecosm.com>

	* gcc_plugin/feature-extract.cpp (mageec_featextract_exec): Build
	feature vector and pass to MAGEEC storage layer.