@@ -1,5 +1,11 @@
 2014-03-18  Simon Cook  <simon.cook@embecosm.com>
 
+	* gcc_plguin/feature-extract.cpp (mageec_featextract_exec): Add
+	feature extractor support for counting switch statements and
+	unary ops.
+
+2014-03-18  Simon Cook  <simon.cook@embecosm.com>
+
 	* gcc_plugin/gcc-plugin.cpp (mageec_featextract_exec): Add support
 	for phi counting features.
 
